# Polaris

./: .env.example  .env.template  .gitignore  .polaris_audit_key  .pre-commit-config.yaml  ACGA3_FACTORY_POSITIONING.md  AGENTS.md  ARCHITECTURE_CHANGES_WS_V2.md  CLAUDE.md  CLI_USAGE.md  CONTRIBUTING.md  FIX_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENT_REPORT.md  LICENSE  None  README.en.md  README.md  all_ruff.json  backend_ruff.json  check_config_refs.py  check_imports.py  check_parents.py  check_test_refs.py  coverage.xml  coverage_output.txt  e402.json  electron-builder.yml  eslint.config.mjs  find_scaffolds.py  fix_stripper.py  harborpilot.py  harborpilot_thin.py  hp.bat  hp.ps1  hp.sh  mypy.ini  package-lock.json  package.json  playwright.config.ts  (+21 more)
audit/: .key  audit-2026-04.jsonl  audit-2026-05.jsonl
docs/: API_TEST_ARCHITECTURE_REVIEW_2026-03-07.json  BETA_READINESS_2026-03-07.md  CONSTITUTION.md  ENV_VAR_MIGRATION.md  KERNELONE_LLM_ARCHITECTURE_REFACTORING_BLUEPRINT_2026-03-26.md  POLARIS_FOLLOWUP_OPTIMIZATION_BLUEPRINT_20260426.md  POLARIS_FULL_EXECUTION_BLUEPRINT_20260426.md  POLARIS_GOVERNANCE_IMPROVEMENT_BLUEPRINT_20260426.md  POLARIS_KERNEL_REFACTOR_BLUEPRINT.md  ROLE_FRAMEWORK.md  ROLE_KERNEL_REFACTOR_SUMMARY.md  TERMINOLOGY.md  TUI_DIRECTOR_CONSOLE.md  engineering_dashboard.md  instructor_integration_guide.md  instructor_tool_calling_demo.md
infrastructure/: __init__.py
memory/: MEMORY.md
metrics_history/: fitness_rules_20260426.json
prompts/: demo_ming_armada.json  demo_ming_armada_zh.json  generic.json  reflection_prompt.json  role_persona.yaml  zhenguan_governance.json
schema/: construction_blueprint.schema.json  director_result.schema.json  event.schema.json  interventions.schema.json  last_state.schema.json  (+3 more)
src/backend/polaris/delivery/cli/: __init__.py  __main__.py  agentic_eval.py  cli_compat.py  cli_completion.py  cli_prompt.py  cli_router.py  context_status.py  demo_collapsible_debug.py  director_result_matcher.py  director_v2.py  logging_policy.py  loop-director.py  loop-pm.py  mouse_interaction.py  polaris_cli.py  pyproject.toml  router.py  super_mode.py  super_pipeline.py  super_pipeline_config.py  terminal_console.py  textual_console.py
src/backend/polaris/delivery/cli/audit/: audit_agent.py  audit_agent_example.py  audit_cli.py  audit_quick.py
src/backend/polaris/delivery/cli/audit/audit/: __init__.py  auditor.py  cli.py  diagnosis.py  factory_ops.py  file_ops.py  formatters.py  handlers.py  handlers_advanced.py  reporters.py
src/backend/polaris/delivery/cli/audit/tests/: __init__.py  test_journal_integration.py
src/backend/polaris/delivery/cli/director/: __init__.py  audit_decorator.py  cli_compat.py  cli_thin.py  console_director_agent.py  console_host.py  console_models.py  console_protocol.py  console_render.py  director_llm_tools.py  director_role.py  director_service.py  projection.py  terminal_console.py
src/backend/polaris/delivery/cli/director/projection/: __init__.py  projection_layer.py  registry.py
src/backend/polaris/delivery/cli/director/tests/: test_console_host_e2e_smoke.py  test_console_host_orchestrator.py  test_orchestrator_e2e_integration.py  test_request_clarity.py  test_stream_protocol.py
src/backend/polaris/delivery/cli/factory/: __init__.py  projection_change_analysis.py  projection_lab.py  projection_reproject.py
src/backend/polaris/delivery/cli/pm/: __init__.py  agents.py  agents_helpers.py  agents_modes.py  backend.py  blocked_policy.py  chief_engineer.py  chief_engineer_llm_tools.py  cli.py  cli_thin.py  command_runner.py  config.py  director_interface.py  director_interface_core.py  director_interface_integration.py  director_mgmt.py  document_manager.py  execution.py  execution_tracker.py  harborpilot_engine.py  memo.py  orchestration_core.py  orchestration_engine.py  pipeline_adapter.py  pm_cli.py  pm_integration.py  pm_role.py  pm_service.py  qa_auditor.py  report_utils.py  requirements_tracker.py  results.py  shangshuling_adapter.py  state_manager.py  task_helpers.py  task_orchestrator.py  task_special.py  task_splitting.py  tasks.py  tasks_utils.py  (+1 more)
src/backend/polaris/delivery/cli/pm/engine/: __init__.py  _dispatch.py  completion_lock.py  core.py  delivery_floor.py  helpers.py  scheduler.py  taskboard.py  tri_council.py
src/backend/polaris/delivery/cli/pm/nodes/: __init__.py  base.py  chief_engineer_node.py  constitution_bindings.py  coordinator.py  director_node.py  pm_node.py  protocols.py  qa_node.py
src/backend/polaris/delivery/cli/pm/orchestration/: __init__.py  architect_stage.py  blueprint_analysis.py  blueprint_pipeline.py  core.py  directive_processing.py  doc_rendering.py  docs_pipeline.py  helpers.py  module_evolution.py
src/backend/polaris/delivery/cli/pm/tests/: test_blocked_policy.py
src/backend/polaris/delivery/cli/stress/: __init__.py  harborpilot_stress.py
src/backend/polaris/delivery/cli/terminal/: __init__.py  _base.py  commands.py  console.py  events.py  layout.py  renderers.py
src/backend/polaris/delivery/cli/tests/: __init__.py  test_agentic_eval_cli.py  test_cli_enhancements.py  test_cli_log_level_option.py  test_cli_prompt.py  test_cli_router.py  test_cli_visual_enhancements.py  test_logging_policy.py  test_super_mode.py  test_super_pipeline_e2e.py  test_terminal_console.py
src/backend/polaris/delivery/cli/textual/: __init__.py  bindings.py  console.py  event_bridge.py  models.py  styles.py
src/backend/polaris/delivery/cli/textual/tests/: TEST_COVERAGE.md  __init__.py  test_event_bridge.py  test_models.py  test_textual_console.py
src/backend/polaris/delivery/cli/themes/: harborpilot.omp.json
src/backend/polaris/delivery/cli/toad/: README.md  __init__.py  __main__.py  app.py
src/backend/polaris/delivery/cli/tools/: __init__.py  benchmark_iterative_loop.py  check_cell_imports.py  check_legacy_imports.py  contextos_gate_checker.py  dev_tools.py
src/backend/polaris/delivery/cli/visualization/: __init__.py  console_integration.py  contracts.py  diff_parser.py  keyboard.py  message_group.py  render_context.py  rich_console.py  theme.py
(+5879 files in other folders)
