[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polaris"
version = "0.1.0"
description = "Polaris Desktop - AI Agent Governance Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Polaris Team" },
]
keywords = ["ai", "agent", "governance", "electron", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    # HTTP Clients
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    # Database
    "lancedb>=0.5.0",
    "sqlalchemy>=2.0.0",
    # Vector Search
    "tantivy>=0.11.0",
    # LLM Providers
    "ollama>=0.1.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    # Messaging
    "nats-py>=0.1.0",
    # Code Parsing
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=0.1.0",
    # Testing & Browser
    "playwright>=1.40.0",
    # CLI & UI
    "rich>=13.7.0",
    "textual>=0.52.0",
    "textual-dev>=1.0.0",
    # System & Utils
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "platformdirs>=4.0.0",
    # Governance Schemas
    "jsonschema>=4.26.0",
    "referencing>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "types-aiofiles>=23.0.0",
]

[project.scripts]
polaris = "polaris.delivery.server:main"
pm = "polaris.delivery.cli.pm.cli:main"
director = "polaris.delivery.cli.director.cli_thin:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend/polaris"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/backend",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "src/backend/tests", "src/backend/polaris"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--tb=short",
]
markers = [
    "integration: integration/e2e style tests",
    "slow: long-running tests",
]
filterwarnings = [
    # nats-py currently uses asyncio.iscoroutinefunction internally.
    # Keep test output clean until upstream migrates to inspect.iscoroutinefunction.
    "ignore:.*iscoroutinefunction.*:DeprecationWarning:nats\\.aio\\.client",
]

[tool.mypy]
python_version = "3.10"
# Strict mode enforcement (Task #4)
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
# Ignore missing imports for third-party packages
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
follow_imports = "silent"
namespace_packages = true
explicit_package_bases = true
exclude = [
    "^tests/",
    "^src/backend/tests/",
    "^tools\\.py$",
    "^infrastructure/",
    "^scripts/",
    ".*/tests/",
]

[tool.ruff]
target-version = "py310"
line-length = 120

# 静态门禁：Thin CLI 策略
# 允许 scripts/ 目录中的 sys.argv 和 argparse 使用
# 其他目录禁止直接使用 sys.argv（应通过 DTO 传递）

[tool.ruff.lint]
# Mandatory quality gates (Task #4)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (type hints)
    "BLE", # flake8-blind-except
    "LOG", # flake8-logging
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "F401",  # imported but unused — disabled: re-export patterns are legitimate (ACGA public contract re-exports); noisy with --fix and breaks import chains
    # ---- ANNOTATION RULES (GRADUAL ADOPTION) ----
    "ANN001", "ANN002", "ANN003", "ANN101", "ANN102",
    "ANN201", "ANN202", "ANN203", "ANN204",
    "ANN401",  # Dynamically typed expressions (Any)
    # ---- RUFF-SPECIFIC RULES ----
    "RUF012",  # Mutable class defaults
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.coverage.run]
source = ["src/backend"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
